fix(ui): ModuleInfo - align duplicate instances

--- a/packages/ui/src/components/module-info/module-info.module.css
+++ b/packages/ui/src/components/module-info/module-info.module.css
@@ -37,5 +37,5 @@
 }
 
 .duplicateInstances {
-  padding: 4px 0; /* compensate for the Entry Label padding */
+  padding: 2px 0; /* compensate for the Entry Label padding */
 }
